add solarix bases

--- a/DiffWords/DiffWords.csproj
+++ b/DiffWords/DiffWords.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Sentence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="solarix\DBReader.cs" />
-    <Compile Include="solarix\GetPrimaryForm.cs" />
+    <Compile Include="solarix\AnalizeWord.cs" />
     <Compile Include="WordNet\WordNet.cs" />
     <Compile Include="Types.cs" />
     <Compile Include="Word.cs" />
